; ModuleID = '/home/carl/AnghaBench/git/extr_csum-file.c_hashfd_check.c'
source_filename = "/home/carl/AnghaBench/git/extr_csum-file.c_hashfd_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hashfile = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c"/dev/null\00", align 1
@O_WRONLY = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [25 x i8] c"unable to open /dev/null\00", align 1
@O_RDONLY = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [20 x i8] c"unable to open '%s'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.hashfile* @hashfd_check(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.hashfile*, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i32, i32* @O_WRONLY, align 4
  %7 = call i32 @open(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = icmp slt i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = call i32 (i8*, ...) @die_errno(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  br label %12

12:                                               ; preds = %10, %1
  %13 = load i8*, i8** %2, align 8
  %14 = load i32, i32* @O_RDONLY, align 4
  %15 = call i32 @open(i8* %13, i32 %14)
  store i32 %15, i32* %4, align 4
  %16 = load i32, i32* %4, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %12
  %19 = load i8*, i8** %2, align 8
  %20 = call i32 (i8*, ...) @die_errno(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.2, i64 0, i64 0), i8* %19)
  br label %21

21:                                               ; preds = %18, %12
  %22 = load i32, i32* %3, align 4
  %23 = load i8*, i8** %2, align 8
  %24 = call %struct.hashfile* @hashfd(i32 %22, i8* %23)
  store %struct.hashfile* %24, %struct.hashfile** %5, align 8
  %25 = load i32, i32* %4, align 4
  %26 = load %struct.hashfile*, %struct.hashfile** %5, align 8
  %27 = getelementptr inbounds %struct.hashfile, %struct.hashfile* %26, i32 0, i32 0
  store i32 %25, i32* %27, align 4
  %28 = load %struct.hashfile*, %struct.hashfile** %5, align 8
  ret %struct.hashfile* %28
}

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @die_errno(i8*, ...) #1

declare dso_local %struct.hashfile* @hashfd(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
